2-operators/pipelines/base/eventlisteners/deploy-aap-instance-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: deploy-aap
  namespace: aap-as-a-service
  labels:
    app.kubernetes.io/instance: pipeline-operator
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: aap-deploy-instance
  annotations:
    cert-manager.io/issuer-name: letsencrypt-sandbox
    cert-manager.io/issuer-kind: ClusterIssuer
spec:
  host: deploy-aap.apps.cluster-ml2qv.ml2qv.sandbox446.opentlc.com
  to:
    kind: Service
    name: el-aap-deploy-instance
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  port:
    targetPort: http-listener
