2-operators/pipelines/base/eventlisteners/destroy-aap-instance-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: destroy-aap
  namespace: aap-as-a-service
  labels:
    app.kubernetes.io/instance: pipeline-operator
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: destroy-aap-instance
  annotations:
    cert-manager.io/issuer-name: letsencrypt-sandbox
    cert-manager.io/issuer-kind: ClusterIssuer
spec:
  host: destroy-aap.apps.rosa-f4hlp.utf9.p1.openshiftapps.com
  to:
    kind: Service
    name: el-destroy-aap-instance
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  port:
    targetPort: http-listener
